workloads/applications/base/camel-bolt-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: camel-bolt
  name: camel-bolt
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app: camel-bolt-app-sandbox
